wildfly/quickstart/kitchensink source copied

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.next
-release.properties
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*~
+target
+.DS_Store
+
+nb-configuration.xml
