--- a/src/prod/resources/mail.properties
+++ b/src/prod/resources/mail.properties
@@ -1,7 +1,5 @@
-mail.smtp.host=smtp.gmail.com
-mail.smtp.socketFactory.prot=465
-mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-mail.smtp.auth=true
-mail.smtp.port=465
+host=smtp.gmail.com
+store=imaps
+folder=alive
 
 # account, password are in account.properties
