Added https conf

--- a/setup/docker/Dockerfile
+++ b/setup/docker/Dockerfile
@@ -1,13 +1,13 @@
 FROM debian:wheezy
 MAINTAINER zemiak@gmail.com
 
-RUN apt-get update && apt-get -yq install dialog
+RUN apt-get update && apt-get -yq install dialog openssh-server postfix bzip2 locales \
+    postgresql cron postgresql-client ffmpeg mp4v2-utils git ffmpegthumbnailer
 
 # ----------
 # SSH Server
 # ----------
 
-RUN apt-get install -yq openssh-server
 RUN groupadd -r vasko -g 434 && useradd -u 432 -r -g vasko -d /home/vasko -s /bin/bash -c "Miroslav Vasko" vasko
 RUN mkdir /home/vasko
 RUN chown vasko.vasko /home/vasko
@@ -23,7 +23,6 @@ EXPOSE 22
 # Mail
 # ----
 
-RUN apt-get -yq install postfix
 ADD main.cf /etc/postfix/
 
 # ----------
@@ -32,18 +31,12 @@ ADD main.cf /etc/postfix/
 
 USER root
 
-# add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
-RUN groupadd -r postgres && useradd -r -g postgres postgres
-
 # make the "en_US.UTF-8" locale so postgres will be utf-8 enabled by default
-RUN apt-get install -y bzip2 locales && rm -rf /var/lib/apt/lists/* \
-	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
-RUN apt-get update && apt-get install -y postgresql
 
 ADD online-db.sql /tmp/
-WORKDIR /tmp
 
 USER postgres
 
@@ -54,11 +47,8 @@ USER postgres
 RUN    /etc/init.d/postgresql start &&\
     psql --command "CREATE USER online_user WITH SUPERUSER PASSWORD 'online/0';" &&\
     createdb --owner=online_user online_db &&\
-    cat /tmp/online_db.sql | psql online_db >/dev/null &&\
+    cat /tmp/online-db.sql | psql online_db >/dev/null &&\
     /etc/init.d/postgresql stop
-
-USER root
-RUN rm /tmp/online_db.sql
 
 # Adjust PostgreSQL configuration so that remote connections to the
 # database are possible.
@@ -75,7 +65,6 @@ EXPOSE 5432
 # ---------------
 
 USER root
-RUN apt-get install -yq cron postgresql-client
 ADD postgresql-backup /etc/cron.d/
 ADD postgresql-backup.sh /usr/local/bin/
 RUN mkdir -p /mnt/backup
@@ -128,7 +117,7 @@ RUN mkdir -p /opt/wildfly/projects/
 WORKDIR /opt/wildfly/projects/
 RUN git clone https://github.com/zemiak/online.git
 RUN cd online && git checkout tags/$ONLINE_VERSION
-ADD https://github.com/zemiak/online/releases/download/$ONLINE_VERSION/online.war /tmp/
+ADD online.war /tmp/
 
 # Setup the Wildfly to support Online
 WORKDIR /opt/wildfly
@@ -156,7 +145,6 @@ EXPOSE 8080 9990
 # Cleanup
 # -------
 
-RUN apt-get clean
 RUN echo "export LC_ALL=en_US.utf8" >>/etc/profile
 
 ADD start.sh /usr/local/bin/
