--- a/src/prod/resources/config.properties
+++ b/src/prod/resources/config.properties
@@ -2,4 +2,4 @@ mailTo=zemiak@gmail.com
 mailFrom=noreply@online.zemiak.com
 mailSubjectNew=Online: A New Protected System %s
 mailSubjectStart=Online: Outage Start %s
-mailSubjectStop=Online: Outage Stop %
+mailSubjectStop=Online: Outage Stop %s
