Removed SSL certificate from repo

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ nb-configuration.xml
 src/dev/resources/account.properties
 src/prod/resources/account.properties
 src/test/resources/account.properties
+setup/docker/zemiakbox.keystore
