--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ src/test/resources/account.properties
 setup/docker/zemiakbox.keystore
 setup/docker/*.keystore
 setup/docker/*.pem
+setup/docker/wildfly-8.2.0.Final.tar.gz
+setup/docker/jdk.tar.gz
