--- a/src/dev/resources/config.properties
+++ b/src/dev/resources/config.properties
@@ -1,5 +1,7 @@
 mailTo=zemiak@gmail.com
 mailFrom=noreply@online.zemiak.com
-mailSubjectNew=Online: A New Protected System %s
-mailSubjectStart=Online: Outage Start %s
-mailSubjectStop=Online: Outage Stop %s
+mailSubjectNew=Monitoring: A New Protected System %s
+mailSubjectStart=Monitoring: Outage Start %s
+mailSubjectStop=Monitoring: Outage Stop %s
+mailSubjectDailyOk=Monitoring: Daily Report (All OK)
+mailSubjectDailyFailures=Monitoring: Daily Report (FAILURES)
